tests/cases/variables/ok/variables-match-binding.ari
enum Measurement {
  Missing,
  Reading(i32),
}

fn main() -> i64 {
  var result = 0;
  let sample = Reading(41);
  match sample {
    Reading(value) => {
      result = (value as i64) + 1;
    }
    Missing => {
      result = 1;
    }
  }
  return result;
}
