tests/cases/variables/errors/variables-local-shadowing.ari
fn main() -> i64 {
  let value = 1;
  let value = 2;
  return value;
}
